--- a/food-ordering.html
+++ b/food-ordering.html
@@ -31,11 +31,28 @@
   <div class="panel panel-primary">
   <div class="panel-heading">Zamówienia</div>
     <div class="panel-body">
-      <ul>
-        {{#each orders}}
-        <li>{{name}} - {{meal}} - <form id="{{name}}" class="order-removed form-inline"><button id="{{name}}" class="btn btn-xs"><i class="icon-trash"></i></button></form></li>
-        {{/each}}
-      </ul>
+      <table class="table table-striped table-condensed">
+        <thead>
+          <tr>
+            <th>Kto</th>
+            <th>Co</th>
+            <th>Anuluj</th>
+          </tr>
+        </thead>
+        <tbody>
+          {{#each orders}}
+          <tr>
+            <td>{{name}}</td>
+            <td>{{meal}}</td>
+            <td>
+              <form id="{{name}}" class="order-removed form-inline">
+                <button id="{{name}}" class="btn btn-xs"><i class="icon-trash"></i></button>
+              </form>
+            </td>
+          </tr>
+          {{/each}}
+        </tbody>
+      </table>
     </div>
   </div>
 </template>
@@ -51,7 +68,7 @@
     <div class="form-group">
       <input type="text" name="meal" class="form-control" {{orderDisabled}} placeholder="Co chcesz zjeść"/>
     </div>
-    <button class="btn btn-default {{orderDisabled}}">Zamów!</button>
+    <button class="btn btn-primary {{orderDisabled}}">Zamów!</button>
   </form>
   </div>
 </template>
