--- a/food-ordering.html
+++ b/food-ordering.html
@@ -4,7 +4,7 @@
   {{> yield}}
 
   <hr/>
-  <p>Copyright &copy; Kris, 2014-2015.</p>
+  <p>Copyright &copy; Kris, 2016.</p>
 </template>
 
 <template name="Groups">
